manifests/sandbox3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
  namespace: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        gyg.io/istio-proxy-pre-stop-sleep: "60"
      labels:
        app: service-a
    spec:
      containers:
      - image: cainelli/simple-http-server:1.0.0-dev
        imagePullPolicy: Always
        name: service-a
        resources:
          requests:
            cpu: "64m"
            memory: "32M"
          limits:
            cpu: "64m"
            memory: "32M"
        ports:
        - containerPort: 8000
          name: http
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
  namespace: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - image: cainelli/simple-http-server:1.0.0-dev
        imagePullPolicy: Always
        name: service-b
        resources:
          requests:
            cpu: "64m"
            memory: "32M"
          limits:
            cpu: "64m"
            memory: "32M"
        ports:
        - containerPort: 8000
          name: http
      restartPolicy: Always
