manifests/sandbox3/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-a
  namespace: service-a
spec:
  selector:
    app: service-a
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  8000
---
kind: Service
apiVersion: v1
metadata:
  name: service-b
  namespace: service-b
spec:
  selector:
    app: service-b
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  8000
